@@ -1,6 +1,7 @@
 ** v1.32, xx.xx.2016**
 * Install: Added BenikUI's option to change castbar text color (classcolor).
 * GameMenu: Adjust the StrataLevel of the Top Style Bar.
+* ObjectivTracker: For some reason some textures are left. Now hide them.
 
 \\ \\
 ** v1.31, 08.04.2016**
